# ccsds-space-data-link-protocols

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  doxygen.conf  servicesAndBuffersGraph.mmd
ci/: .clang-tidy  clang-tidy.sh  cppcheck-misra.sh  cppcheck.sh  pages_deploy.sh  summarizer.py
ci/page_style/: epilog.html
ci/page_style/doxygen_dark_theme/: README.md  custom.css  custom_dark_theme.css  html_footer.html  html_header.html
inc/: Alert.hpp  CCSDSChannel.hpp  CCSDSLogger.h  CCSDSLoggerImpl.h  CCSDSServiceChannel.hpp  CCSDSTransferFrame.hpp  CCSDSTransferFrameEncoder.hpp  CCSDSTransferFrameEncoderTC.hpp  CCSDSTransferFrameEncoderTM.hpp  CCSDSTransferFrameTC.hpp  CCSDSTransferFrameTM.hpp  CCSDS_Configuration.h  CCSDS_Definitions.hpp  CCSDS_Log.h  CLCW.hpp  ChannelPool.hpp  FarmeAcceptanceReporting.h  FarmeAcceptanceReporting.hpp  FrameAcceptanceReporting.hpp  FrameOperationProcedure.h  FrameOperationProcedure.hpp  FreeRTOSConfig.h  Logger.hpp  MAPP.hpp  MemoryPool.h  MemoryPool.hpp  Packet.cpp  Packet.h  Packet.hpp  PacketTC.hpp  PacketTM.h  PacketTM.hpp  TransferFrame.hpp  TransferFrameTC.hpp  TransferFrameTM.hpp  etl_profile.h  logOperators.h  main.h
inc/FreeRTOSTasks/: DummyTask.h  Task.hpp
inc/Platform/x86/: FrameMaker.hpp  FrameSender.hpp
inc/etl/: String.hpp
lib/FreeRTOS/Source/portable/MemMang/: heap_4.c
src/: CCSDSChannel.cpp  CCSDSServiceChannel.cpp  CCSDSTransferFrame.cpp  CCSDSTransferFrameEncoder.cpp  CCSDSTransferFrameEncoderTM.cpp  CCSDSTransferFrameTC.cpp  CCSDSTransferFrameTM.cpp  CCSDS_Log.cpp  CLCW.cpp  ChannelPool.cpp  FrameAcceptanceReporting.cpp  FrameOperationProcedure.cpp  Logger.cpp  MemoryPool.cpp  Packet.cpp  PacketTC.cpp  PacketTM.cpp  TransferFrame.cpp  TransferFrameTC.cpp  TransferFrameTM.cpp  logOperators.cpp  main.c  main.cpp
src/FreeRTOSTasks/: DummyTask.cpp
src/Platform/x86/: FrameMaker.cpp  FrameSender.cpp  Logger.cpp  main.cpp
src/services/: MAPP.cpp
test/: CCSDSChannel.cpp  CCSDSServiceChannel.cpp  CCSDSTransferFrame.cpp  CCSDSTransferFrameEncoder.cpp  FrameOperationProcedure.cpp  MemoryPool.cpp  Packet.cpp  TmFunctionalTesting.cpp  TransferFrame.cpp
